--- a/images/backend/requirements.txt
+++ b/images/backend/requirements.txt
@@ -21,3 +21,7 @@ django-extensions==3.0.3
 factory-boy==2.12.0
 pytest-factoryboy==2.0.3
 pytest-mock==3.2.0
+djangorestframework==3.11.1
+drf-yasg==1.17.1
+djangorestframework-simplejwt==4.4.0
+django-cors-headers==3.5.0
