--- a/images/backend/requirements.txt
+++ b/images/backend/requirements.txt
@@ -25,3 +25,5 @@ djangorestframework==3.11.1
 drf-yasg==1.17.1
 djangorestframework-simplejwt==4.4.0
 django-cors-headers==3.5.0
+Pillow==7.2.0
+tqdm==4.49.0
