--- a/.env.example
+++ b/.env.example
@@ -21,7 +21,7 @@ WSGI_TIMEOUT=10
 PROJECT_NAME=ltt
 SYSTEM_USER=1000:1000
 ALLOWED_HOSTS=*
-EMAIL_HOST_USER=example@mail.com
+EMAIL_HOST_USER=example@gmail.com
 EMAIL_HOST_PASSWORD=password
 REGISTRATION_SALT=234sefdsrfsr
 DOMAIN=127.0.0.1:9001
